made about section

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 
         <section class="hero">
             <div class="hero-info">
-                <div class="hero-info-title">
-                    <i class='bx bxl-sketch'></i>
-                    My Portfolio
-                </div>
+                <a href="#" download>
+                <button class="hero-info-title">
+                    <i class='bx bxs-download'></i>
+                    Download Resume
+                </button>
+                </a>
 
                 <h1>Hi, I'm <span class="gradient">Parthraj!</span></h1>
 
@@ -62,8 +64,42 @@
 
             <div class="scroll-down"></div>
         </section>
+
+        <section class="info-section">
+            <h1 class="section-title">Hello, There👋</h1>
+            <div class="info-cards">
+                <div class="card">
+                    <h1>Hi, I'm Parthraj</h1>
+                    <p>B.Tech CS-AI student at Newton School of Technology, Rishihood University, who enjoys front-end development and competitive programming, constantly striving to refine skills and build impactful digital experiences.</p>
+                    <img src="Images/grid1.png" alt="card-image">
+                </div>
+
+                <div class="card">
+                    <h1>Tech Stack</h1>
+                    <p>I specialise in a variety of languages, frameworks and tools that allow me to build robust and scalable websites.</p>
+                    <img src="Images/grid2.png" alt="card-image">
+                </div>
+
+                <div class="card">
+                    <h1>I'm very flexible with time zone communications and locations</h1>
+                    <p>I'm based in Delhi NCR, India and open to remote work.</p>
+                    <video src="Videos/glob.mp4" type="'video/mp4" loop autoplay muted plays-inline></video>
+                    <button><i class='bx bx-link-external'></i> Contact Me</button>
+                </div>
+
+                <div class="card">
+                    <h1>My Passion for Coding</h1>
+                    <p>I love solving problems and building things through code. Programming is my passion. With a 950+ CodeForces rating and 75+ solved LeetCode questions, I am always learning and building better digital experiences.</p>
+                    <img src="Images/grid4.png" alt="card-image">
+                </div>
+            </div>
+        </section>
     </div>
     
+
+
+
+
 
 
     <script src="script.js"></script>
