--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
     <div class="container">
+
+        <!-- Header -->
         <video class="back-vid" src="Videos/galaxy.mp4" type="video/mp4" loop autoplay muted plays-inline></video>
 
         <header>
@@ -40,6 +42,7 @@
             <video src="Videos/blackhole.mp4" type="'video/mp4" loop autoplay muted plays-inline></video>
         </div>
 
+        <!-- Front Page -->
         <section class="hero">
             <div class="hero-info">
                 <a href="#" download>
@@ -65,13 +68,14 @@
             <div class="scroll-down"></div>
         </section>
 
+        <!-- About -->
         <section class="info-section">
             <h1 class="section-title">Hello, There👋</h1>
             <div class="info-cards">
                 <div class="card">
                     <h1>Hi, I'm Parthraj</h1>
                     <p>B.Tech CS-AI student at Newton School of Technology, Rishihood University, who enjoys front-end development and competitive programming, constantly striving to refine skills and build impactful digital experiences.</p>
-                    <img src="Images/grid1.png" alt="card-image">
+                    <img src="Images/main.jpeg" alt="card-image">
                 </div>
 
                 <div class="card">
@@ -91,6 +95,63 @@
                     <h1>My Passion for Coding</h1>
                     <p>I love solving problems and building things through code. Programming is my passion. With a 950+ CodeForces rating and 75+ solved LeetCode questions, I am always learning and building better digital experiences.</p>
                     <img src="Images/grid4.png" alt="card-image">
+                </div>
+            </div>
+        </section>
+
+        <!-- Projects -->
+        <section class="my-projects">
+            <h1 class="section-title">My Projects 🧑🏻‍💻</h1>
+
+            <div class="project-card">
+                <div class="project-vidbox">
+                    <video id="project-video1" src="Videos/project1.mp4"></video>
+                    <div class="hover-sign"></div>
+                </div>
+
+                <div class="project-info">
+                    <h1>Animated <span class="gradient">Gaming</span>  Website</h1>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur sed nam deleniti labore, nesciunt est error itaque. Laborum, natus delectus?</p>
+
+                    <div class="project-button">
+                        <button><i class='bx bx-link-external'></i> Website</button>
+                        <button><i class='bx bxl-github' ></i> Source Code</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-vidbox">
+                    <video id="project-video2" src="Videos/project2.mp4"></video>
+                </div>
+
+                <div class="project-info">
+                    <h1>Modern <span class="gradient">Portfolio</span> Website</h1>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur sed nam deleniti labore, nesciunt est error itaque. Laborum, natus delectus?</p>
+                    
+                    <div class="project-button">
+                    <button><i class='bx bx-link-external'></i> Website</button>
+                    <button><i class='bx bxl-github' ></i> Source Code</button>
+                </div>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-vidbox">
+                    <video id="project-video3" src="Videos/project4.mp4"></video>
+                </div>
+
+                <div class="project-info">
+                    <h1>Snake <span class="gradient">Game</span>  Website</h1>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur sed nam deleniti labore, nesciunt est error itaque. Laborum, natus delectus?</p>
+
+                    <div class="project-button">
+                        <button><i class='bx bx-link-external'></i> Website</button>
+                        <button><i class='bx bxl-github' ></i> Source Code</button>
+                    </div>
                 </div>
             </div>
         </section>
