--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <!-- Front Page -->
       <section class="hero">
-        <div class="hero-info">
+        <div class="hero-info autoBlur">
           <a href="#" download>
             <button class="hero-info-title">
               <i class="bx bxs-download"></i>
@@ -88,6 +88,7 @@
 
         <div class="hero-vid-box">
           <video
+            class="autoBlur"
             src="Videos/hero-video.mp4"
             type="'video/mp4"
             loop
@@ -102,7 +103,7 @@
 
       <!-- About -->
       <section class="info-section">
-        <h1 class="section-title">Hello, There👋</h1>
+        <h1 class="section-title autoDisplay">Hello, There👋</h1>
         <div class="info-cards">
           <div class="card">
             <h1>Hi, I'm Parthraj</h1>
@@ -155,15 +156,15 @@
 
       <!-- Projects -->
       <section class="my-projects">
-        <h1 class="section-title">My Projects 🧑🏻‍💻</h1>
+        <h1 class="section-title autoDisplay">My Projects 🧑🏻‍💻</h1>
 
         <div class="project-card">
-          <div class="project-vidbox">
+          <div class="project-vidbox autoBlur">
             <video id="project-video1" src="Videos/project1.mp4"></video>
             <div class="hover-sign"></div>
           </div>
 
-          <div class="project-info">
+          <div class="project-info fadeInRight">
             <h1>Animated <span class="gradient">Gaming</span> Website</h1>
 
             <p>
@@ -180,11 +181,11 @@
         </div>
 
         <div class="project-card">
-          <div class="project-vidbox">
+          <div class="project-vidbox autoBlur">
             <video id="project-video2" src="Videos/project2.mp4"></video>
           </div>
 
-          <div class="project-info">
+          <div class="project-info fadeInRight">
             <h1>Modern <span class="gradient">Portfolio</span> Website</h1>
 
             <p>
@@ -201,11 +202,11 @@
         </div>
 
         <div class="project-card">
-          <div class="project-vidbox">
+          <div class="project-vidbox autoBlur">
             <video id="project-video3" src="Videos/project4.mp4"></video>
           </div>
 
-          <div class="project-info">
+          <div class="project-info fadeInRight">
             <h1>Snake <span class="gradient">Game</span> Website</h1>
 
             <p>
@@ -224,12 +225,12 @@
 
       <!-- Skills -->
       <section class="skills-section">
-        <h1 class="section-title">My Skills</h1>
+        <h1 class="section-title autoDisplay">My Skills</h1>
 
         <div class="skills-box">
           <img class="skills-image" src="Images/digital brain.png" alt="" />
 
-          <div class="designer">
+          <div class="designer autoDisplay">
             <h1 class="gradient">Designer <i class="bx bx-laptop"></i></h1>
             <p>
               Proficient in HTML, CSS, JavaScript, and front-end development.
@@ -238,7 +239,7 @@
             </p>
           </div>
 
-          <div class="coder">
+          <div class="coder autoDisplay">
             <h1 class="gradient">Coder <i class="bx bx-code-block"></i></h1>
             <p>
               Skilled in HTML, CSS, JavaScript, and frameworks like React and
@@ -287,9 +288,9 @@
 
       <!-- Contact -->
       <section class="contact-section">
-        <h1 class="section-title">Let's Talk</h1>
+        <h1 class="section-title autoDisplay">Let's Talk</h1>
 
-        <div class="social-box">
+        <div class="social-box autoBlur">
             <a href="#"><i class='bx bxs-phone-call' ></i> +91 8529295116</a>
             <a href="#"><i class='bx bxl-whatsapp-square' ></i></i> +91 8529295116</a>
             <a href="#"><i class='bx bxl-gmail' ></i>parthrajsinghbhati@gmail.com</a>
@@ -300,7 +301,7 @@
             </div>
         </div>
 
-        <div class="contact-box">
+        <div class="contact-box autoBlur">
             <p>Whether you're looking to build a new website, improve your existing platform, or bring a unique project to life, I'm here to help.</p>
 
             <p>Your Name</p>
