--- a/index.html
+++ b/index.html
@@ -291,52 +291,46 @@
         <h1 class="section-title autoDisplay">Let's Talk</h1>
 
         <div class="social-box autoBlur">
-            <a href="#"><i class='bx bxs-phone-call' ></i> +91 8529295116</a>
-            <a href="#"><i class='bx bxl-whatsapp-square' ></i></i> +91 8529295116</a>
-            <a href="#"><i class='bx bxl-gmail' ></i>parthrajsinghbhati@gmail.com</a>
+          <a href="#"><i class="bx bxs-phone-call"></i> +91 8529295116</a>
+          <a href="#"><i class="bx bxl-whatsapp-square"></i> +91 8529295116</a>
+          <a href="#"
+            ><i class="bx bxl-gmail"></i>parthrajsinghbhati@gmail.com</a
+          >
 
-            <div class="social-icons">
-                <a href="#"><i class='bx bxl-instagram' ></i></a>
-                <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
-            </div>
+          <div class="social-icons">
+            <a href="#"><i class="bx bxl-instagram"></i></a>
+            <a href="#"><i class="bx bxl-linkedin-square"></i></a>
+          </div>
         </div>
 
         <div class="contact-box autoBlur">
-            <p>Whether you're looking to build a new website, improve your existing platform, or bring a unique project to life, I'm here to help.</p>
+          <p>
+            Whether you're looking to build a new website, improve your existing
+            platform, or bring a unique project to life, I'm here to help.
+          </p>
 
-            <p>Your Name</p>
-            <input type="text" id="name" placeholder="Your Full Name">
+          <p>Your Name</p>
+          <input type="text" id="name" placeholder="Your Full Name" />
 
-            <p>Your Email</p>
-            <input type="email" id="email" placeholder="Your Email Address">
+          <p>Your Email</p>
+          <input type="email" id="email" placeholder="Your Email Address" />
 
-            <p>Your Mesaage</p>
-            <input type="text" id="message" placeholder="Share your thoughts...">
+          <p>Your Mesaage</p>
+          <input
+            type="text"
+            id="message"
+            placeholder="Share your thoughts..."
+          />
 
-            <button><i class='bx bx-send' ></i> Send Message</button>
+          <button><i class="bx bx-send"></i> Send Message</button>
         </div>
       </section>
 
       <!-- Footer -->
-       <footer>
+      <footer>
         <h1>Copyright © 2025 Parthraj Singh Bhati | Code. Design. Innovate.</h1>
-       </footer>
+      </footer>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script src="script.js"></script>
 
