--- a/index.html
+++ b/index.html
@@ -42,14 +42,32 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Skills</a></li>
           <li><a href="#">Projects</a></li>
-          <li><a href="#">Education</a></li>
         </ul>
 
         <div class="box-items">
           <a href="#"><i class="bx bxl-github"></i></a>
           <a href="#"><i class="bx bxl-linkedin-square"></i></a>
         </div>
+
+        <div class="menu-icon"><i class='bx bx-menu'></i></div>
       </header>
+
+      <div class="sidebar">
+        <div class="close-icon">
+            <i class='bx bx-x' ></i>
+        </div>
+
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Projects</a></li>
+          </ul>
+
+        <div class="social-icons">
+            <a href="#"><i class="bx bxl-github"></i></a>
+            <a href="#"><i class="bx bxl-linkedin-square"></i></a>
+        </div>
+      </div>
 
       <div class="blackhole-box">
         <video
