made header clickable

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
         </div>
 
         <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
 
         <div class="social-icons">
@@ -120,8 +121,8 @@
       </section>
 
       <!-- About -->
-      <section class="info-section">
-        <h1 class="section-title autoDisplay">Hello, There👋</h1>
+      <section class="info-section" id="about">
+        <h1 class="section-title autoDisplay" >Hello, There👋</h1>
         <div class="info-cards">
           <div class="card">
             <h1>Hi, I'm Parthraj</h1>
@@ -173,7 +174,7 @@
       </section>
 
       <!-- Projects -->
-      <section class="my-projects">
+      <section class="my-projects" id="projects">
         <h1 class="section-title autoDisplay">My Projects 🧑🏻‍💻</h1>
 
         <div class="project-card">
@@ -242,7 +243,7 @@
       </section>
 
       <!-- Skills -->
-      <section class="skills-section">
+      <section class="skills-section" id="skills">
         <h1 class="section-title autoDisplay">My Skills</h1>
 
         <div class="skills-box">
@@ -305,7 +306,7 @@
       </section>
 
       <!-- Contact -->
-      <section class="contact-section">
+      <section class="contact-section" id="contact">
         <h1 class="section-title autoDisplay">Let's Talk</h1>
 
         <div class="social-box autoBlur">
