--- a/index.html
+++ b/index.html
@@ -39,34 +39,47 @@
         </div>
 
         <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Projects</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
 
         <div class="box-items">
-          <a href="#"><i class="bx bxl-github"></i></a>
-          <a href="#"><i class="bx bxl-linkedin-square"></i></a>
+          <a href="https://github.com/parthrajsinghbhati" target="_blank"
+            ><i class="bx bxl-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/parthraj-singh-bhati-6a5128309/"
+            target="_blank"
+            ><i class="bx bxl-linkedin-square"></i
+          ></a>
         </div>
 
-        <div class="menu-icon"><i class='bx bx-menu'></i></div>
+        <div class="menu-icon"><i class="bx bx-menu"></i></div>
       </header>
 
       <div class="sidebar">
         <div class="close-icon">
-            <i class='bx bx-x' ></i>
+          <i class="bx bx-x"></i>
         </div>
 
         <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
 
         <div class="social-icons">
-            <a href="#"><i class="bx bxl-github"></i></a>
-            <a href="#"><i class="bx bxl-linkedin-square"></i></a>
+          <a href="https://github.com/parthrajsinghbhati" target="_blank"
+            ><i class="bx bxl-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/parthraj-singh-bhati-6a5128309/"
+            target="_blank"
+            ><i class="bx bxl-linkedin-square"></i
+          ></a>
         </div>
       </div>
 
@@ -102,7 +115,12 @@
             and skills.
           </p>
 
-          <button><i class="bx bx-send"></i> Contact Me</button>
+          <a
+            href="https://www.linkedin.com/in/parthraj-singh-bhati-6a5128309/"
+            target="_blank"
+          >
+            <button><i class="bx bx-send"></i> Contact Me</button></a
+          >
         </div>
 
         <div class="hero-vid-box">
@@ -117,12 +135,12 @@
           ></video>
         </div>
 
-        <div class="scroll-down"></div>
+        <div onclick="scrollId('about')" class="scroll-down"></div>
       </section>
 
       <!-- About -->
       <section class="info-section" id="about">
-        <h1 class="section-title autoDisplay" >Hello, There👋</h1>
+        <h1 class="section-title autoDisplay">Hello, There👋</h1>
         <div class="info-cards">
           <div class="card">
             <h1>Hi, I'm Parthraj</h1>
@@ -157,7 +175,12 @@
               muted
               plays-inline
             ></video>
-            <button><i class="bx bx-link-external"></i> Contact Me</button>
+            <a
+              href="https://www.linkedin.com/in/parthraj-singh-bhati-6a5128309/"
+              target="_blank"
+            >
+              <button><i class="bx bx-link-external"></i> Contact Me</button></a
+            >
           </div>
 
           <div class="card">
@@ -193,8 +216,12 @@
             </p>
 
             <div class="project-button">
-              <button><i class="bx bx-link-external"></i> Website</button>
-              <button><i class="bx bxl-github"></i> Source Code</button>
+              <a href=""
+                ><button><i class="bx bx-link-external"></i> Website</button></a
+              >
+              <a href=""
+                ><button><i class="bx bxl-github"></i> Source Code</button></a
+              >
             </div>
           </div>
         </div>
@@ -214,8 +241,12 @@
             </p>
 
             <div class="project-button">
-              <button><i class="bx bx-link-external"></i> Website</button>
-              <button><i class="bx bxl-github"></i> Source Code</button>
+              <a href="https://psbhatitech.vercel.app/"
+                ><button><i class="bx bx-link-external"></i> Website</button></a
+              >
+              <a href="https://github.com/parthrajsinghbhati/MyPortfolio"
+                ><button><i class="bx bxl-github"></i> Source Code</button></a
+              >
             </div>
           </div>
         </div>
@@ -235,8 +266,12 @@
             </p>
 
             <div class="project-button">
-              <button><i class="bx bx-link-external"></i> Website</button>
-              <button><i class="bx bxl-github"></i> Source Code</button>
+              <a href="https://snakesfoodgame.netlify.app/"
+                ><button><i class="bx bx-link-external"></i> Website</button></a
+              >
+              <a href="https://github.com/parthrajsinghbhati/SnakeGame"
+                ><button><i class="bx bxl-github"></i> Source Code</button></a
+              >
             </div>
           </div>
         </div>
@@ -317,8 +352,13 @@
           >
 
           <div class="social-icons">
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-linkedin-square"></i></a>
+            <a href="https://www.instagram.com/_bhati_parthraj/"
+              ><i class="bx bxl-instagram"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/parthraj-singh-bhati-6a5128309/"
+              ><i class="bx bxl-linkedin-square"></i
+            ></a>
           </div>
         </div>
 
@@ -327,22 +367,39 @@
             Whether you're looking to build a new website, improve your existing
             platform, or bring a unique project to life, I'm here to help.
           </p>
+          <form id="contactForm">
+            <p>Your Name</p>
+            <input
+              type="text"
+              id="name"
+              placeholder="Your Full Name"
+              required
+            />
 
-          <p>Your Name</p>
-          <input type="text" id="name" placeholder="Your Full Name" />
+            <p>Your Email</p>
+            <input
+              type="email"
+              id="email"
+              placeholder="Your Email Address"
+              required
+            />
 
-          <p>Your Email</p>
-          <input type="email" id="email" placeholder="Your Email Address" />
+            <p>Your Mesaage</p>
+            <input
+              type="text"
+              id="message"
+              placeholder="Share your thoughts..."
+              required
+            />
 
-          <p>Your Mesaage</p>
-          <input
-            type="text"
-            id="message"
-            placeholder="Share your thoughts..."
-          />
-
-          <button><i class="bx bx-send"></i> Send Message</button>
+            <button type="submit">
+              <i class="bx bx-send"></i> Send Message
+            </button>
+          </form>
         </div>
+        <p id="confirmationMessage" class="confirmation">
+          ✅ Your message has been sent successfully!
+        </p>
       </section>
 
       <!-- Footer -->
