--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <!-- Front Page -->
       <section class="hero">
         <div class="hero-info autoBlur">
-          <a href="#" download>
+          <a href="Resume-Parthraj Singh Bhati.pdf" download>
             <button class="hero-info-title">
               <i class="bx bxs-download"></i>
               Download Resume
